// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoCompleteCheckbox should render AutoCompleteCheckbox with no data input 1`] = `
<div>
  <button
    aria-controls="popover-content-:r1:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:r1:"
    type="button"
  >
    <div
      class="css-6t88ve"
    >
      search
      <div
        class="css-1gq8co7"
      />
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
  >
    <section
      class="chakra-popover__content css-lra071"
      id="popover-content-:r1:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`AutoCompleteCheckbox should render AutoCompleteCheckbox with options 1`] = `
<div>
  <button
    aria-controls="popover-content-:r3:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="chakra-button css-4xx2wk"
    id="popover-trigger-:r3:"
    type="button"
  >
    <div
      class="css-6t88ve"
    >
      search
      <div
        class="css-1gq8co7"
      />
      <div
        class="css-17xejub"
      />
      <svg
        class="chakra-icon css-c0air1"
        focusable="false"
        viewBox="0 0 8 4"
      >
        <path
          d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <div
    class="chakra-popover__popper css-0"
    style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
  >
    <section
      class="chakra-popover__content css-lra071"
      id="popover-content-:r3:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
      tabindex="-1"
    />
  </div>
</div>
`;
